--- a/etc/rubyserv.yml.example
+++ b/etc/rubyserv.yml.example
@@ -12,5 +12,6 @@ link:
 rubyserv:
   nickname: RubyServ
   realname: Ruby IRC Services
-  hostname: services.int
+  hostname: rubyservices.int
+  username: RubyServ
   channel: '#services'
